@@ -15,20 +15,24 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
 import java.util.*;
+import java.math.BigDecimal;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class EventServiceTest {
 
     @Mock
     private EventRepository eventRepository;
+
     @Mock
     private AiService aiServiceClient;
+
     @Mock
     private UserService userService;
+
     @Mock
     private LocationService locationServiceClient;
 
@@ -38,61 +42,227 @@ class EventServiceTest {
     @InjectMocks
     private EventService eventService;
 
-    private final LocalDateTime now = LocalDateTime.now();
+    @Test
+    void testSortEvents_CompoundScoringWithUserFilters() {
+        Integer userId = 1;
+        String query = "sushi";
+        Coordinates userCoords = new Coordinates(45.0, 25.0);
+
+        when(userService.getUserCoordinates(userId)).thenReturn(userCoords);
+        when(userService.getUserProfileFilters(userId)).thenReturn(List.of(1, 4, 5));
+        when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of(1, 2, 3));
+
+        Event eventA = new Event();
+        eventA.setId(101);
+        eventA.setName("Event A");
+        eventA.setLocation(new com.soccialy.backend.entity.Location(1, "Loc 1", new BigDecimal("0"), new BigDecimal("0"),null, null, null)); // Updated for the real Location entity
+        eventA.setScheduledDate(LocalDateTime.now().plusDays(1));
+        eventA.setFilterIds(List.of(1, 2));
+
+        Event eventB = new Event();
+        eventB.setId(102);
+        eventB.setName("Event B");
+        eventB.setLocation(new com.soccialy.backend.entity.Location(2, "Loc 2", new BigDecimal("0"), new BigDecimal("0"), null, null, null)); // Updated for the real Location entity
+        eventB.setScheduledDate(LocalDateTime.now().plusDays(20));
+        eventB.setFilterIds(List.of(4, 10));
+
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList()))
+                .thenReturn(new ArrayList<>(List.of(eventA, eventB)));
+
+        Map<Integer, List<Integer>> mockLocationFilters = new HashMap<>();
+        mockLocationFilters.put(1, List.of(3));
+        mockLocationFilters.put(2, List.of());
+        when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(mockLocationFilters);
+
+        Map<Integer, Double> mockDistances = new HashMap<>();
+        mockDistances.put(1, 5.0);
+        mockDistances.put(2, 40.0);
+        when(aiServiceClient.getDistances(eq(userCoords), anySet())).thenReturn(mockDistances);
+
+        Double maxDistance = 50.0;
+        Integer maxDays = 30;
+
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
+
+        assertEquals(2, results.size(), "Should return exactly 2 results");
+        assertEquals(101, results.get(0).getId(), "Event A should be ranked first");
+        assertEquals("Event A", results.get(0).getName());
+
+        assertEquals(102, results.get(1).getId(), "Event B should be ranked second");
+        assertEquals("Event B", results.get(1).getName());
+    }
 
     @Test
-    void testSortEvents_VerifiesFullScoringAndSorting() {
+    void testSortEvents_DynamicParameters_AreRespected() {
         Integer userId = 1;
-        String query = "concert";
-        Double maxDist = 50.0;
-        Integer maxD = 30;
+        String query = "coffee";
+        Double maxDistance = 10.0;
+        Integer maxDays = 7;
+        Coordinates userCoords = new Coordinates(45.0, 25.0);
 
+        when(userService.getUserCoordinates(userId)).thenReturn(userCoords);
         when(userService.getUserProfileFilters(userId)).thenReturn(List.of(1));
         when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of(2));
 
-        Location locA = Location.builder().id(10).latitude(45.1).longitude(25.1).build();
-        Event eventA = Event.builder().id(101).name("Rock").location(locA).scheduledDate(now.plusDays(1)).filterIds(List.of(1, 2)).build();
+        Event eventA = new Event();
+        eventA.setId(1);
+        eventA.setLocation(new com.soccialy.backend.entity.Location(1, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        eventA.setFilterIds(List.of(1, 2));
+        eventA.setScheduledDate(LocalDateTime.now().plusDays(3));
 
-        Location locB = Location.builder().id(20).latitude(46.0).longitude(26.0).build();
-        Event eventB = Event.builder().id(102).name("Talk").location(locB).scheduledDate(now.plusDays(25)).filterIds(List.of(99)).build();
+        Event eventB = new Event();
+        eventB.setId(2);
+        eventB.setLocation(new com.soccialy.backend.entity.Location(2, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        eventB.setFilterIds(List.of(1, 2));
+        eventB.setScheduledDate(LocalDateTime.now().plusDays(10));
 
-        when(eventRepository.searchByTextOrFilters(eq(query), anyList()))
-                .thenReturn(new ArrayList<>(List.of(eventB, eventA)));
-
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(Arrays.asList(eventA, eventB));
         when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
+        
+        Map<Integer, Double> mockDistances = Map.of(1, 5.0, 2, 15.0);
+        when(aiServiceClient.getDistances(eq(userCoords), anySet())).thenReturn(mockDistances);
 
-        Map<Integer, Double> distMap = Map.of(10, 5.0, 20, 45.0);
-        when(aiServiceClient.getDistances(any(), anyMap())).thenReturn(distMap);
-
-        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDist, maxD, now, 45.0, 25.0);
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
 
         assertEquals(2, results.size());
-        assertEquals(101, results.get(0).getId(), "Event A should be first due to higher weighted score");
-        assertEquals(102, results.get(1).getId(), "Event B should be second");
-
-        verify(aiServiceClient).getDistances(any(), argThat(map ->
-                map.containsKey(10) && map.get(10).getLatitude() == 45.1
-        ));
+        assertEquals(1, results.get(0).getId(), "Event A should be first because it is inside the dynamic bounds");
+        assertEquals(2, results.get(1).getId(), "Event B should be last because it scores 0 on both distance and time");
     }
 
     @Test
-    void testSortEvents_EmptyFilters_AppliesSafeSQLPatch() {
-        when(userService.getUserProfileFilters(anyInt())).thenReturn(new ArrayList<>());
-        when(aiServiceClient.getSearchFilters(anyString())).thenReturn(new ArrayList<>());
+    void testSortEvents_MathBugFix_IntegerDivisionIsPrevented() {
+        Integer userId = 1;
+        String query = "coffee";
+        Double maxDistance = 50.0;
+        Integer maxDays = 30;
+        Coordinates userCoords = new Coordinates(45.0, 25.0);
 
-        eventService.sortEvents(1, "query", 50.0, 30, now, 45.0, 25.0);
+        when(userService.getUserCoordinates(userId)).thenReturn(userCoords);
+        when(userService.getUserProfileFilters(userId)).thenReturn(List.of());
+        when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of());
 
-        verify(eventRepository).searchByTextOrFilters(anyString(), argThat(list ->
-                list.contains(-1) && list.size() == 1
-        ));
+        Event event = new Event();
+        event.setId(1);
+        event.setLocation(new com.soccialy.backend.entity.Location(1, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        event.setScheduledDate(LocalDateTime.now().plusDays(15));
+
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(new ArrayList<>(List.of(event)));
+        when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
+        when(aiServiceClient.getDistances(eq(userCoords), anySet())).thenReturn(Map.of(1, 0.0));
+
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
+
+        assertEquals(1, results.size());
     }
 
     @Test
-    void testSortEvents_NoCandidates_ReturnsEmptyList() {
-        when(eventRepository.searchByTextOrFilters(anyString(), anyList())).thenReturn(new ArrayList<>());
+    void testSortEvents_UnknownDistanceFallback_IsStrictlyZero() {
+        Integer userId = 1;
+        String query = "coffee";
+        Double maxDistance = 100.0;
+        Integer maxDays = 30;
 
-        List<EventResponseDTO> results = eventService.sortEvents(1, "none", 50.0, 30, now, 45.0, 25.0);
+        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
+        when(userService.getUserProfileFilters(userId)).thenReturn(List.of());
+        when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of());
 
-        assertTrue(results.isEmpty());
+        Event event = new Event();
+        event.setId(99);
+        event.setLocation(new com.soccialy.backend.entity.Location(99, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        event.setScheduledDate(LocalDateTime.now());
+
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(new ArrayList<>(List.of(event)));
+        when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
+        when(aiServiceClient.getDistances(any(), anySet())).thenReturn(new HashMap<>());
+
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, maxDistance, maxDays);
+
+        assertEquals(1, results.size());
+        assertEquals(99, results.get(0).getId());
     }
+
+    @Test
+    void testSortEvents_NoFilters_ReturnsPerfectFilterScore() {
+        Integer userId = 1;
+        String query = "";
+        
+        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
+        when(userService.getUserProfileFilters(userId)).thenReturn(new ArrayList<>());
+        when(aiServiceClient.getSearchFilters(query)).thenReturn(new ArrayList<>());
+
+        Event event = new Event();
+        event.setId(1);
+        event.setLocation(new com.soccialy.backend.entity.Location(1, "Loc", new BigDecimal("0"), new BigDecimal("0"), null, null, null));
+        event.setFilterIds(List.of(5, 6, 7));
+
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList())).thenReturn(new ArrayList<>(List.of(event)));
+        when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
+        when(aiServiceClient.getDistances(any(), anySet())).thenReturn(Map.of(1, 5.0));
+
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, 50.0, 30);
+
+        assertEquals(1, results.size());
+        assertEquals(1, results.get(0).getId());
+    }
+
+    @Test
+    void testSortEvents_NoCandidatesFound_ReturnsEmptyList() {
+        Integer userId = 1;
+        String query = "something obscure";
+
+        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
+        when(userService.getUserProfileFilters(userId)).thenReturn(List.of(1));
+        when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of(2));
+
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList()))
+                .thenReturn(new ArrayList<>());
+
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, 50.0, 30);
+
+        assertEquals(0, results.size());
+    }
+
+    @Test
+    void testSortEvents_BoundaryConditions() {
+        Integer userId = 1;
+        String query = "boundary";
+        LocalDateTime now = LocalDateTime.now();
+        when(userService.getUserCoordinates(userId)).thenReturn(new Coordinates(45.0, 25.0));
+        when(userService.getUserProfileFilters(userId)).thenReturn(List.of());
+        when(aiServiceClient.getSearchFilters(query)).thenReturn(List.of());
+
+        // Event 1: Distance > maxDistance
+        Event e1 = new Event();
+        e1.setId(10); e1.setName("Far Event");
+        Location l1 = new Location(); l1.setId(100); e1.setLocation(l1);
+        e1.setScheduledDate(now.plusDays(1));
+
+        // Event 2: ScheduledDate in the past
+        Event e2 = new Event();
+        e2.setId(11); e2.setName("Past Event");
+        Location l2 = new Location(); l2.setId(101); e2.setLocation(l2);
+        e2.setScheduledDate(now.minusDays(1));
+
+        // Event 3: ScheduledDate is null
+        Event e3 = new Event();
+        e3.setId(12); e3.setName("No Date Event");
+        Location l3 = new Location(); l3.setId(102); e3.setLocation(l3);
+        e3.setScheduledDate(null);
+
+        when(eventRepository.searchByTextOrFilters(eq(query), anyList()))
+                .thenReturn(new ArrayList<>(List.of(e1, e2, e3)));
+
+        Map<Integer, Double> distances = new HashMap<>();
+        distances.put(100, 60.0); // > 50.0
+        distances.put(101, 10.0);
+        distances.put(102, 10.0);
+
+        when(aiServiceClient.getDistances(any(), anySet())).thenReturn(distances);
+        when(locationServiceClient.getFiltersForLocations(anySet())).thenReturn(new HashMap<>());
+
+        List<EventResponseDTO> results = eventService.sortEvents(userId, query, 50.0, 30);
+
+        assertEquals(3, results.size());
+    }
+
 }
